--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="sharplight | a simple chat application built with node.js and websocket">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sharp Light的聊天室</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" href="stylesheets/main.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
     <link rel="shortcut icon" href="jiuyue.ico" type="image/x-icon">
     <link rel="icon" href="jiuyue.ico" type="image/x-icon">
 </head>
